...
                android:id="@+id/rb_entrants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Entrants"/>

            <RadioButton
                android:id="@+id/rb_organizers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Organisers"/>
        </RadioGroup>
    </LinearLayout>

    <!-- RecyclerView for users list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:clipToPadding="false" />

...
